@@ -1,3 +1,10 @@
+2007-08-07  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp.el (tramp-handle-file-remote-p): Handle optional parameter
+	IDENTIFICATION.
+	(tramp-file-name-handler): No special handling for
+	`expand-file-name'.  But for `file-name-as-directory'.
+
 2007-07-25  Glenn Morris  <rgm@gnu.org>
 
 	* Relicense all FSF files to GPLv3 or later.
